overflow desing fix

--- a/src/Components/AdminSideBar/index.css
+++ b/src/Components/AdminSideBar/index.css
@@ -161,11 +161,7 @@ Sidebar
     border: 1px solid rgba(0, 0, 0, 0.3);
     /* box-shadow: rgba(0, 0, 0, 0.5); */
   }
-  .close-modal-btn {
-    display: none;
-    visibility: none;
-    background-color: red;
-  }
+
   .btn {
     display: none;
   }
